# hamahiyo

./: .gitignore  README.md  analyze_message_timing.py  message_timing_analysis.json  pyproject.toml
instance/: messages.db
src/: accumulate.py  chatbot.py  convert_blog.py  discordbot.py  evaluation.py  generate.py  init_db.py  message_timing_model.py  reading.py  remove_bad_words.py  scheduler.py  server.py  slack.py  train.ipynb  twitterbot.py  utilities.py
