[tool.poetry]
name = "hamahiyo"
version = "0.1.0"
description = ""
authors = ["tada"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.39.2"
sentencepiece = "^0.2.0"
pandas = "^2.2.1"
torch = "^2.2.2"
accelerate = "0.29.0"
setuptools = "^69.2.0"
protobuf = "^5.27.2"
flask = "^3.0.3"
flask-cors = "^4.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
