[project]
name = "hamahiyo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.6",
    "bs4>=0.0.2",
    "discord-py[voice]>=2.5.2",
    "jaconv>=0.4.0",
    "jinja2>=3.1.6",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "transformers>=4.52.4",
    "tweepy>=4.15.0",
]
